--- a/index.html
+++ b/index.html
@@ -53,10 +53,6 @@
         <button class="btn-primary">Explore More</button>
       </div>
     </section>
-    <!-- features will enjoy -->
-    <section>
-
-    </section>
 
     <!-- some facts -->
     <section class="some-facts">
@@ -93,6 +89,21 @@
             <h5 class="fact-name">Email Send</h5>
           </div>
         </div>
+      </div>
+    </section>
+    <!-- our sponsor -->
+    <section class="our-sponsor">
+      <div class="sponsor-info">
+        <h3 class="section-title">our sponsor</h3>
+        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have
+          suffered alteration.</p>
+      </div>
+      <div class="sponsor-compani">
+        <img src="images/sponsors/spotify.png" alt="">
+        <img src="images/sponsors/amazon.png" alt="">
+        <img src="images/sponsors/google.png" alt="">
+        <img src="images/sponsors/telerama.png" alt="">
+        <img src="images/sponsors/figma.png" alt="">
       </div>
     </section>
   </main>
