--- a/index.html
+++ b/index.html
@@ -53,6 +53,51 @@
         <button class="btn-primary">Explore More</button>
       </div>
     </section>
+    <!-- features section start -->
+    <section class="features display-flex">
+      <div>
+        <h3 id="features-section-title" class="section-title">Features you will <br> love & enjoy</h3>
+        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have
+          suffered alteration in some form,
+          by injected humour, or randomised words which don't look even</p>
+
+
+        <!-- feature card container -->
+        <div class="feature-card">
+          <h4 class="feature-title">Dexktop & Mobile Version</h4>
+          <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority
+            have suffered alteration in some form,
+            by injected humour, or randomised...........</p>
+        </div>
+        <div class="feature-card">
+          <h4 class="feature-title">Dexktop & Mobile Version</h4>
+          <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority
+            have suffered alteration in some form,
+            by injected humour, or randomised...........</p>
+        </div>
+        <div class="feature-card">
+          <h4 class="feature-title">Dexktop & Mobile Version</h4>
+          <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority
+            have suffered alteration in some form,
+            by injected humour, or randomised...........</p>
+        </div>
+        <div class="feature-card">
+          <h4 class="feature-title">Dexktop & Mobile Version</h4>
+          <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority
+            have suffered alteration in some form,
+            by injected humour, or randomised...........</p>
+        </div>
+
+      </div>
+      <div class="feature-architect">
+        <img src="images/architect.png" alt="">
+        <button id="Experience-badge" class="btn-primary">
+          <span id="Experience-year">10+Years</span>
+          <br>
+          <span>Experience</span>
+        </button>
+      </div>
+    </section>
 
     <!-- some facts -->
     <section class="some-facts">
@@ -108,7 +153,9 @@
     </section>
   </main>
   <footer>
-
+    <div class="footer ">
+      <h4 class="text-light-gray">All rights reserved copyright@2023 startup landing page design</h4>
+    </div>
   </footer>
 </body>
 
